[project]
name = "bloggenerationagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "langgraph-cli[inmem]>=0.4.30",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "watchdog>=6.0.0",
]
